Corrects display of panel header
- Show "Firstname Lastname" instead of "Lastname, Firstname"
- No whitespace between name and question mark
- No padding-left

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -303,7 +303,3 @@ figcaption {
 #meta-person {
 	overflow: auto;
 }
-
-#meta-person .panel-title {
-	padding-left: 22px;
-}
